tests/fixtures/dimensions/change_blast_radius/bad/u1.ts
import { core } from "./core";
export const u1 = core + 1;
